www/comps/app.css
/* ... */
.navigation-two-columns .navigation-column{
	flex:1 1 auto;
}
.navigation-two-columns .navigation-column:first-child{
	border-right:1px solid var(--navigation-color-border);
}
.navigation-entities-header{
	padding:15px 8px 2px 2px;
	display:flex;
	flex-flow:row nowrap;
	align-items:center;
	justify-content:space-between;
	border-bottom:1px solid var(--navigation-color-border);
}
.navigation-entities{
	flex:1 1 auto;
	display:flex;
	flex-flow:column nowrap;
	align-items:stretch;
	overflow:auto;
}
.navigation .entry{
	padding:8px 8px 8px 12px;
	margin:0px;
	display:flex;
	color:inherit;
	flex-flow:row nowrap;
	align-items:center;
	text-decoration:none;
	border-right:5px solid transparent;
	box-sizing:border-box;
	outline:none;
}
.navigation .entry.isTitle.grow{
	flex:1 1 auto;
}
.navigation .entry.inactive{
	color:var(--color-font-disabled);
}
.navigation .entry.separator{
	margin:16px 0px 0px;
	font-weight:bold;
	margin-bottom:-1px;
	border-bottom:1px solid var(--navigation-color-border);
}
.navigation .entry.center{
	justify-content:center;
}
.navigation .entry img{
	height:20px;
	width:auto;
	margin-right:9px;
	filter:var(--image-filter-dark);
}
.navigation.isDark .entry img{
	filter:var(--image-filter-bright);
}
.navigation .entry.inactive img{
	filter:var(--image-filter-alt);
}
.navigation .entry.router-link-active:not(.isTitle){
	border-right-color:var(--navigation-color-border);
	background-color:rgba(0,0,0,0.06);
}
.navigation.isDark .entry.router-link-active:not(.isTitle){
	background-color:rgba(0,0,0,0.16);
}
.navigation .entry:not(.isTitle):focus,
.navigation .entry:not(.isTitle):hover{
	margin-bottom:-2px;
	border-bottom:2px solid var(--navigation-color-border);
	padding-right:calc(8px - 3px);
	padding-left:calc(12px + 3px);
	transition:padding-left 0.2s, padding-right 0.2s;
	background-color:rgba(0,0,0,0.08);
}
.navigation.isDark .entry:not(.isTitle):focus,
.navigation.isDark .entry:not(.isTitle):hover{
	background-color:rgba(0,0,0,0.22);
}

/* generic spans */
.generic-span-ellipsis{
	min-width:0px;
	text-overflow:ellipsis;
	white-space:nowrap;
	overflow:hidden;
	line-height:normal; /* FF fix */
}

/* generic table */
.generic-table-wrap{
	flex:1 1 auto;
	overflow-y:auto;
}
.generic-table{
	width:100%;
}
.generic-table>thead>tr>th,
.generic-table>tbody>tr>td{
	height:36px;
	padding:3px 8px;
	border-bottom:1px solid var(--color-border);
	background-color:var(--color-bg);
}
.generic-table.auto-height>thead>tr>th,
.generic-table.auto-height>tbody>tr>td{
	height:auto;
}
.generic-table.topAligned>thead>tr>th,
.generic-table.topAligned>tbody>tr>td,
.generic-table>thead>tr>th.topAligned,
.generic-table>tbody>tr>td.topAligned{
	vertical-align:top;
}
.generic-table.bright>tbody>tr>td{
	background-color:var(--color-input);
}
.generic-table>thead>tr>th:first-child,
.generic-table>tbody>tr>td:first-child{
	padding-left:12px;
}
.generic-table.sticky-top>thead>tr>th{
	position:sticky;
	top:0px;
	z-index:var(--z-index-admin-table-sticky-top);
}
.generic-table.rows-contrast>tbody>tr:nth-child(even) td{
	background-color:var(--color-list-row-even);
}
.generic-table>tbody>tr.row-contrast td{
	background-color:var(--color-list-row-even);
}
.generic-table>tbody>tr.row-clickable:hover>td{
	cursor:pointer;
	outline:none;
	filter:brightness(90%);
	box-shadow:inset 0 -2px 0 0 var(--color-accent3-alt);
	transition:filter 0.2s, box-shadow 0.5s;
}
.generic-table>tbody>tr.row-clickable.row-selected>td{
	filter:brightness(80%);
}
.generic-table>thead>tr>th .mixed-header{
	display:flex;
	flex-flow:row nowrap;
	align-items:center;
}
.generic-table>thead>tr>th .mixed-header>img{
	width:16px;
	height:16px;
	margin-right:6px;
	filter:var(--image-filter);
}
.generic-table>tbody>tr.sticky-row{
	position:sticky;
	top:0px;
	z-index:var(--z-index-admin-table-sticky-top);
}
.generic-table.no-padding>tbody>tr>td{
	padding:3px 2px 3px 4px;
}

/* generic vertical table */
.generic-table-vertical{
	width:calc(100% - 16px);
	max-width:900px;
	border-spacing:0px;
	margin:8px;
	border-collapse:collapse;
}
.generic-table-vertical.w1200{
	max-width:1200px;
}
.generic-table-vertical>thead>tr,
.generic-table-vertical>tbody>tr{
	border-bottom:1px solid var(--color-border);
}
.generic-table-vertical>thead>tr:last-child,
.generic-table-vertical>tbody>tr:last-child{
	border:none;
}
.generic-table-vertical>tbody>tr>td{
	padding:10px 12px;
}
.generic-table-vertical>tbody>tr>td.grouping{
	font-weight:bold;
}
.generic-table-vertical>tbody>tr>td:not(.grouping){
	vertical-align:top;
}
.generic-table-vertical>tbody>tr>td:first-child{
	font-size:110%;
	line-height:150%;
}
.generic-table-vertical.large>tbody>tr>td{
	max-width:720px;
}
.generic-table-vertical.noRowBorders>thead>tr,
.generic-table-vertical.noRowBorders>tbody>tr{
	border-bottom:none;
}
.generic-table-vertical tr.noPadding,
.generic-table-vertical td.noPadding{
	padding:0px !important;
}

/* generic entry lists */
.generic-entry-list{
	display:flex;
	flex-flow:column wrap;
	max-height:100%;
	align-content:flex-start;
}
.generic-entry-list.height-large{
	max-height:700px;
}
.generic-entry-list.singleColumn{
	flex-flow:column nowrap;
}
.generic-entry-list .entry{
	width:380px;
	height:46px;
	padding:2px 12px 2px;
	margin:3px 8px 3px 0px;
	display:flex;
	flex-flow:row nowrap;
	gap:calc(var(--spacing) / 2);
	align-items:center;
	justify-content:space-between;
	font-size:100%;
	line-height:100%;
	color:inherit;
	text-decoration:none;
	background-color:var(--color-input);
	border:var(--border-input);
	border-radius:var(--border-input-radius);
	border-bottom:2px solid var(--color-border);
	box-shadow:var(--shadow-input);
	box-sizing:border-box;
	transition:border-bottom 0.1s, box-shadow 0.1s;
}
.generic-entry-list.singleColumn .entry{
	width:100%;
	margin:3px 0px;
}
.generic-entry-list.wide .entry{
	width:500px;
}
/* ... */

